add Scratch_DNN ForwardPropagation

--- a/deeplearning/Scratch_DNN.ipynb
+++ b/deeplearning/Scratch_DNN.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# はじめに\n",
     "* DeepNeuralNetを、TensorFlow等のライブラリを用いずにスクラッチで実装していく。\n",
-    "* ここでは最終的に5層の、画像の判別機をつくる。（CNNは用いない）\n",
+    "* ここでは全結合5層の、画像の判別機をつくる。（CNNは用いない）\n",
     "* ある程度の知識は前提として進める。\n",
     "* 量が多くなるため、随時更新。"
    ]
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 重みの初期化\n",
+    "# 1. 重みの初期化\n",
     "* 重みを初期化するメソッドを作成する\n",
     "* DeepLearningで学習を進める前に、W,bを初期化する必要がある。\n",
     "* Wは0で初期化すると、学習が進まない。\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        " 'b2': array([[ 0.]])}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,6 +89,147 @@
    "metadata": {},
    "source": [
     "* W1,W2,b1,b2を作成してくれる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Forward Propagation\n",
+    "* Forward Propagationを実装する\n",
+    "* まずは1つ前のActivation Functionの返り値とW,bを基に、活性化関数に入れる数値を計算。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def linear_forward(A,W,b):\n",
+    "    Z = np.dot(W,A) + b\n",
+    "    \n",
+    "    # Backwardを計算する際に用いる\n",
+    "    cache = (A,W,b)\n",
+    "    \n",
+    "    return Z, cache"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 活性化関数を作成する。\n",
+    "* ReLU関数とsigmoid関数をつくる。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def relu(Z):\n",
+    "    A = Z * (Z > 0)\n",
+    "    return A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sigmoid(Z):\n",
+    "    A = 1 / (1 + np.exp(Z))\n",
+    "    return A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* ここまでに作成した、ReLU,sigmoid,linear_forwardを元に、前層のActicationの返り値から次のActivationの返り値を返す関数を作る"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def linear_activation_forward(A_prev, W, b,activation):\n",
+    "\n",
+    "    Z, linear_cache = linear_forward(A_prev,W,b)\n",
+    "\n",
+    "    if activation == \"relu\":\n",
+    "        A, activation_cache = relu(Z)\n",
+    "    \n",
+    "    if activation == \"sigmoid\":\n",
+    "        A, activation_cache = sigmoid(Z)\n",
+    "    \n",
+    "    cache = (linear_cache, activation_cache)\n",
+    "    \n",
+    "    return A, cache"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* ここまでで各層での計算の関数はできたため、最後にinputからoutputを返す関数を作成する"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model_forward(X, parameters):\n",
+    "    caches = []\n",
+    "    A = X\n",
+    "    # 各層の間にW,bがあるため、数を2で割れば層数になる\n",
+    "    L = len(parameters) // 2 \n",
+    "    \n",
+    "    # 隠れ層はReLUを用いる\n",
+    "    for l in range(L):\n",
+    "        A_prev = A\n",
+    "        A, cache = linear_activation_forward(A_prev, parameters[\"W\"+str(l)],parameters[\"b\"+str(l)],\"relu\")\n",
+    "        caches.append(cache)\n",
+    "    \n",
+    "    # 最終層はSigmoidを用いる\n",
+    "    AL, cache = linear_activation_forward(A, parameters[\"W\"+str(L)], parameters[\"b\"+str(L)],\"sigmoid\")\n",
+    "    caches.append(cache)\n",
+    "    \n",
+    "    return AL, caches"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 上記でForwardPropagationは実装できた"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Cost Function\n",
+    "* ForwardPropagationによって、あるinputに対し、あるパラメータの時の、予測値を求めることができるようになった。\n",
+    "* ここではその予測結果がどれだけ正しいのかを算出するために、Cost関数を作成する。\n",
+    "* クロスエントロピー誤差を用いる。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_cost(AL, Y):\n",
+    "    "
    ]
   },
   {
