--- a/deeplearning/Scratch_DNN.ipynb
+++ b/deeplearning/Scratch_DNN.ipynb
@@ -7,7 +7,7 @@
     "# はじめに\n",
     "* DeepNeuralNetを、TensorFlow等のライブラリを用いずにスクラッチで実装していく。\n",
     "* ここでは全結合5層の、画像の判別機をつくる。（CNNは用いない）\n",
-    "* ある程度の知識は前提として進める。\n",
+    "* ある程度の知識は前提として進める。DeepLearningや微積分の基本等。\n",
     "* 量が多くなるため、随時更新。"
    ]
   },
@@ -142,7 +142,31 @@
    "source": [
     "def sigmoid(Z):\n",
     "    A = 1 / (1 + np.exp(Z))\n",
-    "    return A"
+    "    return A, Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.26894142],\n",
+       "       [ 0.26894142],\n",
+       "       [ 0.26894142],\n",
+       "       [ 0.11920292],\n",
+       "       [ 0.11920292]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sigmoid(np.array([1,1,1,2,2,])).reshape(-1,1)"
    ]
   },
   {
@@ -264,6 +288,74 @@
    ],
    "source": [
     "np.squeeze([[[[[13]]]]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Backward Propagation\n",
+    "* Backward Propagationを実装する。\n",
+    "* Z = WA+b のBackwardと、A = activation(Z)のBackwardを実装する必要がある。\n",
+    "* Forward Propagationでは、ReLUとSigmoidの活性化関数を実装したので、Backwardでも両方に対応する必要がある。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def linear_backward(dZ, cache):\n",
+    "    A_prev, W, b = cache\n",
+    "    m = A_prev.shape[1]\n",
+    "    \n",
+    "    dW = (1/m) * np.dot(dZ, A_prev.T)\n",
+    "    db = (1/m) * np.sum(dZ, axis=1, keepdims=True)\n",
+    "    dA_prev = np.dot(W.T, dZ)\n",
+    "    \n",
+    "    return dA_prev, dW, db"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* ReLUとsigmoidの微分を作成する\n",
+    "* dZ = dA * g'(Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def relu_backward(dA, activation_cache):\n",
+    "    Z  = activation_cache\n",
+    "    dZ = dA * (Z > 0)\n",
+    "    \n",
+    "    return dZ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sigmoid_backward(dA, activation_cache):\n",
+    "    Z = activation_cache\n",
+    "    dZ = dA * sigmoid(1 - Z)[0] * sigmoid(Z)[0]\n",
+    "    \n",
+    "    return dZ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 上記の関数を用いて、Backward Propagationを作成する"
    ]
   },
   {
