--- a/deeplearning/Scratch_DNN.ipynb
+++ b/deeplearning/Scratch_DNN.ipynb
@@ -359,6 +359,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def linear_activation_backward(dA, cache, activation):\n",
+    "    linear_cache, activation_cache = cache\n",
+    "    \n",
+    "    if activation == \"relu\":\n",
+    "        dZ = relu_backward(dA, activation_cache)\n",
+    "        \n",
+    "    elif activation == \"sigmoid\":\n",
+    "        dZ = sigmoid_backward(dA, activation_cache)\n",
+    "        \n",
+    "    dA_prev, dW, db = linear_backward(dZ, linear_cache)\n",
+    "    \n",
+    "    return dA_prev, dW, db"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
