--- a/deeplearning/Scratch_DNN.ipynb
+++ b/deeplearning/Scratch_DNN.ipynb
@@ -102,11 +102,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def linear_forward(A,W,b):\n",
+    "    # 1つ前のAにWをかけて、bを足し、Zを求める\n",
     "    Z = np.dot(W,A) + b\n",
     "    \n",
     "    # Backwardを計算する際に用いる\n",
@@ -173,12 +174,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* ここまでに作成した、ReLU,sigmoid,linear_forwardを元に、前層のActicationの返り値から次のActivationの返り値を返す関数を作る"
+    "* ここまでに作成した、ReLU関数、sigmoid関数、linear_forward関数を元に、前層のActicationの返り値から次のActivationの返り値を返す関数を作る"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +190,7 @@
     "    if activation == \"relu\":\n",
     "        A, activation_cache = relu(Z)\n",
     "    \n",
-    "    if activation == \"sigmoid\":\n",
+    "    elif activation == \"sigmoid\":\n",
     "        A, activation_cache = sigmoid(Z)\n",
     "    \n",
     "    cache = (linear_cache, activation_cache)\n",
@@ -211,19 +212,26 @@
    "outputs": [],
    "source": [
     "def model_forward(X, parameters):\n",
+    "    \n",
     "    caches = []\n",
     "    A = X\n",
     "    # 各層の間にW,bがあるため、数を2で割れば層数になる\n",
     "    L = len(parameters) // 2 \n",
     "    \n",
-    "    # 隠れ層はReLUを用いる\n",
+    "    # 隠れ層のユニットではReLUを用いる\n",
     "    for l in range(L):\n",
     "        A_prev = A\n",
-    "        A, cache = linear_activation_forward(A_prev, parameters[\"W\"+str(l)],parameters[\"b\"+str(l)],\"relu\")\n",
+    "        A, cache = linear_activation_forward(A_prev,\n",
+    "                                             parameters[\"W\"+str(l)],\n",
+    "                                             parameters[\"b\"+str(l)],\n",
+    "                                             \"relu\")\n",
     "        caches.append(cache)\n",
     "    \n",
     "    # 最終層はSigmoidを用いる\n",
-    "    AL, cache = linear_activation_forward(A, parameters[\"W\"+str(L)], parameters[\"b\"+str(L)],\"sigmoid\")\n",
+    "    AL, cache = linear_activation_forward(A,\n",
+    "                                          parameters[\"W\"+str(L)],\n",
+    "                                          parameters[\"b\"+str(L)],\n",
+    "                                          \"sigmoid\")\n",
     "    caches.append(cache)\n",
     "    \n",
     "    return AL, caches"
@@ -233,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 上記でForwardPropagationは実装できた"
+    "* 上記で、ForwardPropagationは実装できた"
    ]
   },
   {
@@ -241,7 +249,7 @@
    "metadata": {},
    "source": [
     "# 3. Cost Function\n",
-    "* ForwardPropagationによって、あるinputに対し、あるパラメータの時の、予測値を求めることができるようになった。\n",
+    "* ForwardPropagationによって、あるinputに対し、あるパラメータW、bの時の、予測値を求めることができるようになった。\n",
     "* ここではその予測結果がどれだけ正しいのかを算出するために、Cost関数を作成する。\n",
     "* クロスエントロピー誤差を用いる。"
    ]
@@ -355,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 上記の関数を用いて、Backward Propagationを作成する"
+    "* 上記の関数を用いて、1層分のBackward Propagationを作成する"
    ]
   },
   {
@@ -377,6 +385,50 @@
     "    \n",
     "    return dA_prev, dW, db"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* さらにこれを多層にする"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def L_model_backward(AL, Y, caches):\n",
+    "    \n",
+    "    grads = {}\n",
+    "    L = len(caches)\n",
+    "    m = AL.shape[1]\n",
+    "    Y = Y.reshape(AL.shape)\n",
+    "    \n",
+    "    dAL = - ( np.divide(Y, AL) - np.divide(1-Y, 1-AL))\n",
+    "    \n",
+    "    current_cache = caches[L-1]\n",
+    "    grads[\"dA\" + str(L)], grads[\"dW\" + str(L)], grads[\"db\" + str(L)] = linear_activation_backward(dAL, current_cache, \"sigmoid\")\n",
+    "    \n",
+    "    for l in reversed(range(L-1)):\n",
+    "        current_cache = caches[l]\n",
+    "        dA_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
